# pi-acpinator

./: .gitignore  .glimpse  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md
.crush/: session
.github/workflows/: ci.yml  release.yml
assets/: permission-gate.ts
npm/: make-platform-package.mjs
npm/pi-acpinator/: package.json
plans/: M1_5-tools-and-thinking.md  M2-permission-gate.md  M3-config-and-sessions.md  M4-perf-and-benchmarks.md  M5-distribution.md  README.md  TESTING.md
scripts/: bench-compare.mjs  bench.mjs  component-test.mjs  fake-pi.mjs
src/: main.rs
src/acp/: mcp.rs  mod.rs  translate.rs
src/pi/: client.rs  events.rs
