[package]
name = "pi-acpinator"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-client-protocol = "1.2.0"
anyhow = "1.0.103"
bytes = "1.12.1"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt", "macros", "process", "io-util", "io-std", "sync", "time", "signal"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.4", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
